# Asteroids-SDL

./: CMakeLists.txt  README.md  TODOs.txt
SDL-Engine/: CMakeLists.txt
SDL-Engine/include/: PrintDebug.h  SDLEngine.h
SDL-Engine/include/Application/: Application.h
SDL-Engine/include/Assets/Components/: ParticleEmitter.h  Renderer2D.h  Transform.h  UITexture.h
SDL-Engine/include/Core/: AssetPathHolder.h  EngineSystems.h  GameScene.h  HelperFunctions.h  Layer.h  Misc.h
SDL-Engine/include/Core/CoreSystems/: CoreSystemsHolder.h  ResourceManager.h  TextureResourceManager.h
SDL-Engine/include/Core/CoreSystems/EventSystem/: EventSystem.h
SDL-Engine/include/Core/CoreSystems/InputSystem/: InputSystem.h
SDL-Engine/include/Core/ECS/: ECSData.h  ECSManager.h
SDL-Engine/include/Core/ECS/SparseSet/: SparseSet.h
SDL-Engine/include/Core/ECS/Systems/: ParticleSystem.h  RenderingSystem.h  SweepAndPrunePhysicsSystem.h  System.h  TransformSolverSystem.h
SDL-Engine/include/Scene/: GameObject.h
SDL-Engine/src/Application/: Application.cpp
SDL-Engine/src/Core/: GameScene.cpp
SDL-Engine/src/Core/CoreSystems/: ResourceManager.cpp  TextureResourceManager.cpp
SDL-Engine/src/Core/CoreSystems/EventSystem/: EventSystem.cpp
SDL-Engine/src/Core/CoreSystems/InputSystem/: InputSystem.cpp
SDL-Engine/src/Core/ECS/: ECSManager.cpp
SDL-Engine/src/Core/ECS/Systems/: ParticleSystem.cpp  RenderingSystem.cpp  SweepAndPrunePhysicsSystem.cpp  TransformSolverSystem.cpp
include/: AsteroidsApp.h  Asteroids_App.h  EmptyApp.h  GameActionStack.h
include/Actions/: ActionStack.h  IAction.h
include/Assets/GameObjects/: TestGameObject.h
include/GameActions/: EnemyControlAction.h  GameSceneAction.h  IControlAction.h  MainGameSceneAction.h  PlayerControlAction.h  PlayerInputAction.h  PlayerRespawnAction.h  SpaceshipMoveAction.h
include/GameEvents/: GameEvents.h
include/GameObjects/: Asteroid.h  EnemyProjectile.h  EnemySpaceship.h  Enemyship.h  IHostile.h  IProjectile.h  LoneParticleEmitter.h  Player.h  PlayerProjectile.h  PoolManager.h  ProjectileBase.h  ProjectilePool.h  SimpleChild.h  SpaceShip.h  SpaceShipParticleEmitter.h  UnitManager.h
include/GameObjects/ObjectPooling/: GenericObjectPool.h  ProjectileObjectPool.h  UnitObjectPool.h
include/GameObjects/UI/: Button.h  ButtonManager.h  ScoreAndHealthUI.h  UIText.h
include/GameScenes/: GameOverScene.h  MainGameScene.h  MainMenuScene.h  TestGameScene.h
src/: AsteroidsApp.cpp  Asteroids_App.cpp  EmptyApp.cpp  GameActionStack.cpp  main.cpp
src/Actions/: ActionStack.cpp
src/Assets/GameObjects/: TestGameObject.cpp
src/GameActions/: EnemyControlAction.cpp  GameSceneAction.cpp  MainGameSceneAction.cpp  PlayerControlAction.cpp  PlayerInputAction.cpp  PlayerRespawnAction.cpp  SpaceshipMoveAction.cpp
src/GameObjects/: Asteroid.cpp  EnemyProjectile.cpp  EnemySpaceship.cpp  Enemyship.cpp  LoneParticleEmitter.cpp  Player.cpp  PlayerProjectile.cpp  ProjectileBase.cpp  ProjectilePool.cpp  SimpleChild.cpp  SpaceShip.cpp  SpaceShipParticleEmitter.cpp  UnitManager.cpp
src/GameObjects/ObjectPooling/: ProjectileObjectPool.cpp  UnitObjectPool.cpp
src/GameObjects/UI/: Button.cpp  ButtonManager.cpp  ScoreAndHealthUI.cpp  UIText.cpp
src/GameScenes/: GameOverScene.cpp  MainGameScene.cpp  MainMenuScene.cpp  TestGameScene.cpp
